[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
authors = ["Bart van Raaij <info@bartvanraaij.nl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[dependencies]
cached = "0.54.0"
im = "15.1.0"
indicatif = "0.17.7"
itertools = "0.13.0"
num = "0.4.1"
rayon = "1.10.0"
regex = "1.10.2"

[profile.release]
strip = "symbols"
